# fake-gps

./: .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac
app/: build.gradle  build.gradle.in  proguard-rules.pro
app/src/androidTest/java/io/github/yusaka39/fakegps/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  AndroidManifest.xml.in
app/src/main/kotlin/io/github/yusaka39/fakegps/: ConfigureConfig.kt.in  MainActivity.kt
app/src/main/kotlin/io/github/yusaka39/fakegps/activity/: MainActivity.kt
app/src/main/kotlin/io/github/yusaka39/fakegps/service/: LocationProviderService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/github/yusaka39/fakegps/: ExampleUnitTest.java
